// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogIn renders a 'connecting' message while connecting 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <LogIn>
    <div
      className="login"
    >
      <div
        className="login__inner p-card--highlighted"
      >
        <img
          alt="JAAS logo"
          className="login__logo"
          src="logo-black-on-white.svg"
        />
        <button
          className="p-button--neutral"
          disabled={true}
        >
          <i
            className="p-icon--spinner u-animation--spin"
          />
          Connecting...
        </button>
      </div>
    </div>
    <main>
      App content
    </main>
  </LogIn>
</Provider>
`;

exports[`LogIn renders a login UI if the user is not logged in 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <LogIn>
    <div
      className="login"
    >
      <div
        className="login__inner p-card--highlighted"
      >
        <img
          alt="JAAS logo"
          className="login__logo"
          src="logo-black-on-white.svg"
        />
        <a
          className="p-button--positive"
          href="I am a url"
          rel="noopener noreferrer"
          target="_blank"
        >
          Log in to the dashboard
        </a>
      </div>
    </div>
    <main>
      App content
    </main>
  </LogIn>
</Provider>
`;
